Adds ConsoleDriver publish profiles

--- a/IniLib/IniLib/IniLib.fsproj
+++ b/IniLib/IniLib/IniLib.fsproj
@@ -32,6 +32,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Properties\PublishProfiles\Release.pubxml" />
+    <None Include="Properties\PublishProfiles\Release.pubxml.user" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FSharpPlus" Version="1.3.2" />
   </ItemGroup>
 
