--- a/IniLib/IniLib.Test/IniLib.Test.fsproj
+++ b/IniLib/IniLib.Test/IniLib.Test.fsproj
@@ -14,6 +14,7 @@
     <Compile Include="Options\QuotationRuleTests.fs" />
     <Compile Include="Options\DuplicateKeyRuleTests.fs" />
     <Compile Include="Options\DuplicateSectionRuleTests.fs" />
+    <Compile Include="LexerTests.fs" />
     <Compile Include="NodeBuilderTests.fs" />
     <Compile Include="ConfigurationTests.fs" />
     <Compile Include="Program.fs" />
