Fixes mixed tabs and spaces

--- a/ConsoleDriver/ConsoleDriver/ConsoleDriver.csproj
+++ b/ConsoleDriver/ConsoleDriver/ConsoleDriver.csproj
@@ -32,4 +32,13 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="iniq-completion.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="install">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
